@@ -82,6 +82,7 @@ Documentation
 - fix some namespace listings in the glossary
 - correct an example in the book
 - formatting improvements in html for glossary server
+- minor expansions to the descriptions in the glossary
 
 Kernel
 
